dev/aware/api-deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aware-api
  namespace: aware
spec:
  template:
    spec:
      containers:
      - name: aware-api
