dev/aware/ingress-patch.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aware
  namespace: aware
spec:
  tls:
    - hosts:
        - aware.dev.sdpaks.equinor.com
      secretName: aware-tls
  rules:
    - host: aware.dev.sdpaks.equinor.com
      http:
        paths:
          - path: /
            backend:
              serviceName: aware-web
              servicePort: 80
          - path: /api
            backend:
              serviceName: aware-api
              servicePort: 80
